--- a/index.html
+++ b/index.html
@@ -16,26 +16,37 @@
     <link rel="stylesheet" type="text/css" href="main.css">
 </head>
 <body>
-
-    <div class="main">
-        <div class="navbar">
-            <div class="icon">
-                <h2 class="logo">ENGLISH GALAXY</h2>
-            </div>
-
-            <div class="menu">
-                <ul>
-                    <li><a href="#">BLOG</a></li>
-                    <li><a href="#">ABOUTUS</a></li>
-                    <li><a href="#">CATEGORY</a></li>
-                    <li><a href="#">CARIER</a></li>
-                </ul>
-            </div>
-
-            <div class="search">
-                <input class="srch" type="search" name="" placeholder="Type To text">
-                <a href="#"> <button class="btn">Search</button></a>
-            </div>
+    <body>
+        <header class="galaxy-header">
+           <div class="header-content">
+               <div class="left-section">
+                   <div class="logo">
+                       <img src="img/logo.png" alt="Galaxy Logo">
+                   </div>
+                   <nav class="navbar">
+                       <ul>
+                           <li><a href="#">Home</a></li>
+                           <li><a href="#">Blog</a></li>
+                           <li><a href="#">About Us</a></li>
+                           <li class="category-menu">
+                               <a href="#">Category</a>
+                               <span class="menu-icon">&#9776;</span>
+                               <div class="dropdown-content">
+                                   <a href="#">Sekolah Dasar(SD)</a>
+                                   <a href="#">Sekolah Menengah Pertama(SMP)</a>
+                                   <a href="#">Sekolah Menengah Akhir(SMA)</a>
+                               </div>
+                           </li>                        
+                           <li><a href="#">Career</a></li>
+                           <li><a href="#">Tips & Trick</a></li>
+                       </ul>
+                   </nav>            
+               </div>
+              <div class="user-controls">
+                 <button class="sign-in-button">Login/Sign In</button>
+              </div>
+           </div>
+       </header>
 
         </div> 
         <div class="content">
@@ -54,7 +65,7 @@
     <div id="formList">
         <div id="list">
             <div class="item">
-                <img src="images/sd.png.png" class="avatar">
+                <img src="img/sd.png.png" class="avatar">
                 <div class="content">
                     <table width="100%" cellspacing="0">
                         <tr>
@@ -119,7 +130,7 @@
                 </div>
             </div>
             <div class="item">
-                <img src="images/Ellipse 3.png" class="avatar">
+                <img src="img/Ellipse 3.png" class="avatar">
                 <div class="content">
                     <table width="100%" cellspacing="0">
                         <tr>
@@ -150,17 +161,40 @@
 }
     </script>
 
-<footer class="footer">
-    <div class="footer-content">
-        <h1>ENGLISH GALAXY</h1>
-        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown</p>
-        <h1>FQ</h1>
-        <img src="images/Circled Envelope.png" alt="Envelope Icon">
-        <img src="images/Instagram Circle.png" alt="Instagram Icon">
-        <img src="images/WhatsApp.png" alt="WhatsApp Icon">
+<footer class="galaxy-footer">
+    <div class="footer-first">
+       <div class="left-column">
+          <div class="footer-column about-us-footer">
+             <h3>About Us</h3>
+                <ul>
+                   <li><a href="#">Blog</a></li>
+                   <li><a href="#">Category</a></li>
+                   <li><a href="#">Career</a></li>
+                </ul>        
+          </div>
+          <div class="footer-column support-footer">
+             <h3>Help and Support</h3>
+                <ul>
+                   <li><a href="#">English Galaxy FAQs</a></li>
+                </ul>        
+          </div>
+    </div>
+    <div class="right-column">
+       <div class="footer-column social-footer">
+          <h3>Socials</h3>
+             <ul class="social-icons">
+                <li><a href="#"><i class="fab fa-facebook"></i></a></li>
+                <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+                <li><a href="#"><i class="fab fa-instagram"></i></a></li>
+                <li><a href="#"><i class="fab fa-whatsapp"></i></a></li>
+             </ul>        
+       </div>
+    </div>
+    </div>
+
+    <div class="footer-second">
+        <p>&copy; 2023 English Galaxy. All Rights Reserved.</p>
     </div>
 </footer>
-</body>
-</html>
 </body>
 </html>
