--- a/index.html
+++ b/index.html
@@ -16,39 +16,37 @@
     <link rel="stylesheet" type="text/css" href="main.css">
 </head>
 <body>
-    <body>
-        <header class="galaxy-header">
-           <div class="header-content">
-               <div class="left-section">
-                   <div class="logo">
-                       <img src="img/logo.png" alt="Galaxy Logo">
-                   </div>
-                   <nav class="navbar">
-                       <ul>
-                           <li><a href="#">Home</a></li>
-                           <li><a href="#">Blog</a></li>
-                           <li><a href="#">About Us</a></li>
-                           <li class="category-menu">
-                               <a href="#">Category</a>
-                               <span class="menu-icon">&#9776;</span>
-                               <div class="dropdown-content">
-                                   <a href="#">Sekolah Dasar(SD)</a>
-                                   <a href="#">Sekolah Menengah Pertama(SMP)</a>
-                                   <a href="#">Sekolah Menengah Akhir(SMA)</a>
-                               </div>
-                           </li>                        
-                           <li><a href="#">Career</a></li>
-                           <li><a href="#">Tips & Trick</a></li>
-                       </ul>
-                   </nav>            
-               </div>
-              <div class="user-controls">
-                 <button class="sign-in-button">Login/Sign In</button>
-              </div>
-           </div>
-       </header>
 
-        </div> 
+    <header class="galaxy-header">
+        <div class="header-content">
+            <div class="left-section">
+                <div class="logo">
+                    <img src="img/logo.png" alt="Galaxy Logo">
+                </div>
+                <nav class="navbar">
+                    <ul>
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#">Blog</a></li>
+                        <li><a href="#">About Us</a></li>
+                        <li class="category-menu">
+                            <a href="#">Category</a>
+                            <span class="menu-icon">&#9776;</span>
+                            <div class="dropdown-content">
+                                <a href="#">Sekolah Dasar(SD)</a>
+                                <a href="#">Sekolah Menengah Pertama(SMP)</a>
+                                <a href="#">Sekolah Menengah Akhir(SMA)</a>
+                            </div>
+                        </li>                        
+                        <li><a href="#">Career</a></li>
+                        <li><a href="#">Tips & Trick</a></li>
+                    </ul>
+                </nav>            
+            </div>
+           <div class="user-controls">
+              <button class="sign-in-button">Login/Sign In</button>
+           </div>
+        </div>
+    </header> 
         <div class="content">
             <h1>Mari <br><span>Bergabung Bersama</span> <br>Kami</h1>
             <p class="par">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt neque 
@@ -65,11 +63,11 @@
     <div id="formList">
         <div id="list">
             <div class="item">
-                <img src="img/sd.png.png" class="avatar">
+                <img src="images/sd.png.png" class="avatar">
                 <div class="content">
                     <table width="100%" cellspacing="0">
                         <tr>
-                            <td>SD</td>
+                            <td>Materi SD</td>
                         </tr>
                         <tr>
                             <td>Introduction Basic English Vocabullary</td>
@@ -82,11 +80,11 @@
                 </div>
             </div>
             <div class="item">
-                <img src="img/smp.png.png" class="avatar">
+                <img src="images/smp.png.png" class="avatar">
                 <div class="content">
                     <table width="100%" cellspacing="0">
                         <tr>
-                            <td>SMP</td>
+                            <td>Materi SMP</td>
                         </tr>
                         <tr>
                             <td>Present</td>
@@ -98,11 +96,11 @@
                 </div>
             </div>
             <div class="item">
-                <img src="img/sma.png.png" class="avatar">
+                <img src="images/sma.png.png" class="avatar">
                 <div class="content">
                     <table width="100%" cellspacing="0">
                         <tr>
-                            <td>SMA</td>
+                            <td>Materi SMA</td>
                         </tr>
                         <tr>
                             <td>Recount Text</td>
@@ -114,7 +112,7 @@
                 </div>
             </div>
             <div class="item">
-                <img src="img/Ellipse 1.png" class="avatar">
+                <img src="images/Ellipse 1.png" class="avatar">
                 <div class="content">
                     <table width="100%" cellspacing="0">
                         <tr>
@@ -130,7 +128,7 @@
                 </div>
             </div>
             <div class="item">
-                <img src="img/Ellipse 3.png" class="avatar">
+                <img src="images/Ellipse 3.png" class="avatar">
                 <div class="content">
                     <table width="100%" cellspacing="0">
                         <tr>
@@ -161,40 +159,43 @@
 }
     </script>
 
-<footer class="galaxy-footer">
-    <div class="footer-first">
-       <div class="left-column">
-          <div class="footer-column about-us-footer">
-             <h3>About Us</h3>
-                <ul>
-                   <li><a href="#">Blog</a></li>
-                   <li><a href="#">Category</a></li>
-                   <li><a href="#">Career</a></li>
-                </ul>        
-          </div>
-          <div class="footer-column support-footer">
-             <h3>Help and Support</h3>
-                <ul>
-                   <li><a href="#">English Galaxy FAQs</a></li>
-                </ul>        
-          </div>
-    </div>
-    <div class="right-column">
-       <div class="footer-column social-footer">
-          <h3>Socials</h3>
-             <ul class="social-icons">
-                <li><a href="#"><i class="fab fa-facebook"></i></a></li>
-                <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-                <li><a href="#"><i class="fab fa-instagram"></i></a></li>
-                <li><a href="#"><i class="fab fa-whatsapp"></i></a></li>
-             </ul>        
-       </div>
-    </div>
-    </div>
-
-    <div class="footer-second">
-        <p>&copy; 2023 English Galaxy. All Rights Reserved.</p>
-    </div>
-</footer>
+ <footer class="galaxy-footer">
+         <div class="footer-first">
+            <div class="left-column">
+               <div class="footer-column about-us-footer">
+                  <h3>About Us</h3>
+                     <ul>
+                        <li><a href="#">Blog</a></li>
+                        <li><a href="#">Category</a></li>
+                        <li><a href="#">Career</a></li>
+                     </ul>        
+               </div>
+               <div class="footer-column support-footer">
+                  <h3>Help and Support</h3>
+                     <ul>
+                        <li><a href="#">English Galaxy FAQs</a></li>
+                     </ul>        
+               </div>
+         </div>
+         <div class="right-column">
+            <div class="footer-column social-footer">
+               <h3>Socials</h3>
+                  <ul class="social-icons">
+                     <li><a href="#"><i class="fab fa-facebook"></i></a></li>
+                     <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+                     <li><a href="#"><i class="fab fa-instagram"></i></a></li>
+                     <li><a href="#"><i class="fab fa-whatsapp"></i></a></li>
+                  </ul>        
+            </div>
+         </div>
+         </div>
+ 
+         <div class="footer-second">
+             <p>&copy; 2023 English Galaxy. All Rights Reserved.</p>
+         </div>
+     </footer>
+</body>
+</body>
+</html>
 </body>
 </html>
