--- a/login.html
+++ b/login.html
@@ -19,11 +19,11 @@
     left: 50%;
     padding: 50px 30px;
     position: absolute;
-    background: rgba(0, 0, 0, 0.7);
-    color: #fff;
+    background: #fff;
+    color: #000;
     transform: translate(-50%, -50%);
     box-sizing: border-box;
-    border: 1px solid white;
+    border: 1px solid #000;
     border-radius: 10px;
 }
 
@@ -54,19 +54,18 @@ h1 {
 
 .form-input{
     height: 40px;
-    background: transparent;
     color: #fff;
     border: none;
-    border-bottom: 1px solid #fff;
+    border-bottom: 1px solid black;
     outline: none;
 }
 
 .btn{
     height: 38px;
-    background: #fb2525;
+    background: #f7941d;
     color: #fff;
     font-size: 18px;
-    border: 1px solid #fff;
+    border: 1px solid #000;
     border-radius: 20px;
     outline: none;
     transition: 0.5s ease;
@@ -80,7 +79,6 @@ h1 {
 .login a{
     font-size: 12px;
     line-height: 20px;
-    color: #fff;
 }
 
 .login a:hover{
@@ -96,7 +94,7 @@ h1 {
 
 .register-link p a{
     font-size: 15px;
-    color: #fff;
+    color: #000;
     text-decoration: none;
     font-weight: 600;
 }
