--- a/registrasi.html
+++ b/registrasi.html
@@ -6,9 +6,9 @@
     <title>Register</title>
     <style>
         body{
-    background:#0f3462;
     font-family: 'Montserrat', sans-serif;
     width: 100%;
+    background-color: #233954;
     color: white;
 }
 
@@ -19,12 +19,15 @@
     left: 50%;
     padding: 50px 30px;
     position: absolute;
-    background: rgba(0, 0, 0, 0.7);
+    background: #ffffff;
+    border: 1px solid #fff;
     color: #fff;
     transform: translate(-50%, -50%);
     box-sizing: border-box;
-    border: 1px solid white;
     border-radius: 10px;
+}
+.login h1{
+    color: #000;
 }
 
 .avatar {
@@ -63,7 +66,7 @@ h1 {
 
 .btn{
     height: 38px;
-    background: #fb2525;
+    background: #f7941d;
     color: #fff;
     font-size: 18px;
     border: 1px solid #fff;
@@ -94,9 +97,12 @@ h1 {
     margin-top: 20px;
 }
 
+.register-link p{
+    color: #000;
+}
 .register-link p a{
     font-size: 15px;
-    color: #fff;
+    color: #000;
     text-decoration: none;
     font-weight: 600;
 }
@@ -111,9 +117,9 @@ h1 {
     width: 270px;
     box-sizing: border-box;
     font-size: 10px;
-    border: 3px solid black;
+    border: 1px solid rgb(50, 48, 48);
+    padding: 0 10px;
     border-radius: 10px;
-    background-color: black;
 }
 
     </style>
