--- a/login.html
+++ b/login.html
@@ -6,10 +6,9 @@
     <title>Login</title>
     <style>
         body{
-    background:#0f3462;
-    font-family: 'Montserrat', sans-serif;
-    width: 100%;
-    color: white;
+        background-image: url(img/nightsky.jpg);
+        background-size: cover;
+        width: 100px;
 }
 
 .login{
@@ -118,6 +117,7 @@ h1 {
 </head>
 
 <body>
+     <div class="background-image"></div>
     <div class="login">
         <img src="img/profil.png"  class="avatar">
         <h1>Login</h1>
