--- a/index.html
+++ b/index.html
@@ -8,194 +8,83 @@
     <link rel="stylesheet" type="text/css" href="main.css">
 </head>
 <body>
-    <!DOCTYPE html>
-<html lang="en">
-<head>
-    <title>Webpage Design</title>
-    <link rel="stylesheet" type="text/css" href="reset.css">
-    <link rel="stylesheet" type="text/css" href="main.css">
-</head>
-<body>
-
+  <header>
     <header class="galaxy-header">
-        <div class="header-content">
-            <div class="left-section">
-                <div class="logo">
-                    <img src="img/logo.png" alt="Galaxy Logo">
-                </div>
-                <nav class="navbar">
-                    <ul>
-                        <li><a href="#">Home</a></li>
-                        <li><a href="#">Blog</a></li>
-                        <li><a href="#">About Us</a></li>
-                        <li class="category-menu">
-                            <a href="#">Category</a>
-                            <span class="menu-icon">&#9776;</span>
-                            <div class="dropdown-content">
-                                <a href="#">Sekolah Dasar(SD)</a>
-                                <a href="#">Sekolah Menengah Pertama(SMP)</a>
-                                <a href="#">Sekolah Menengah Akhir(SMA)</a>
-                            </div>
-                        </li>                        
-                        <li><a href="#">Career</a></li>
-                        <li><a href="#">Tips & Trick</a></li>
-                    </ul>
-                </nav>            
+      <div class="header-content">
+          <div class="left-section">
+              <div class="logo">
+                  <img src="img/logo.png" alt="Galaxy Logo">
+              </div>
+              <nav class="navbar">
+                  <ul>
+                      <li><a href="#">Home</a></li>
+                      <li><a href="#">Blog</a></li>
+                      <li><a href="#">About Us</a></li>
+                      <li class="category-menu">
+                          <a href="#">Category</a>
+                          <span class="menu-icon">&#9776;</span>
+                          <div class="dropdown-content">
+                              <a href="#">Sekolah Dasar(SD)</a>
+                              <a href="#">Sekolah Menengah Pertama(SMP)</a>
+                              <a href="#">Sekolah Menengah Akhir(SMA)</a>
+                          </div>
+                      </li>                        
+                      <li><a href="#">Career</a></li>
+                      <li><a href="#">Tips & Trick</a></li>
+                  </ul>
+              </nav>            
             </div>
            <div class="user-controls">
               <button class="sign-in-button">Login/Sign In</button>
            </div>
         </div>
-    </header> 
-        <div class="content">
-            <h1>Mari <br><span>Bergabung Bersama</span> <br>Kami</h1>
-            <p class="par">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt neque 
-                 expedita atque eveniet <br> quis nesciunt. Quos nulla vero consequuntur, fugit nemo ad delectus 
-                <br> a quae totam ipsa illum minus laudantium?</p>
-
-                <button class="cn"><a href="#">READ MORE</a></button>
-
-             </div>
-          </div>
+    </header>
+      </header>
+      <div class="maincontainer">
+          <h1>Taylor Swift's 1989: The return of a pop music masterpiece</h1>
+        <div class="center-image">
+          <img src="image/gambar1.png" alt="png" width="370px">
         </div>
-    </div>
-    <script src="https://unpkg.com/ionicons@5.4.0/dist/ionicons.js"></script>
-    <div id="formList">
-        <div id="list">
-            <div class="item">
-                <img src="images/sd.png.png" class="avatar">
-                <div class="content">
-                    <table width="100%" cellspacing="0">
-                        <tr>
-                            <td>Materi SD</td>
-                        </tr>
-                        <tr>
-                            <td>Introduction Basic English Vocabullary</td>
-                        </tr>
-                        <tr>
-                            <td>Basic English Concepts</td>
-                        </tr>
-                       
-                    </table>
-                </div>
-            </div>
-            <div class="item">
-                <img src="images/smp.png.png" class="avatar">
-                <div class="content">
-                    <table width="100%" cellspacing="0">
-                        <tr>
-                            <td>Materi SMP</td>
-                        </tr>
-                        <tr>
-                            <td>Present</td>
-                        </tr>
-                        <tr>
-                            <td>Asking and Giving Atention </td>
-                        </tr>
-                    </table>
-                </div>
-            </div>
-            <div class="item">
-                <img src="images/sma.png.png" class="avatar">
-                <div class="content">
-                    <table width="100%" cellspacing="0">
-                        <tr>
-                            <td>Materi SMA</td>
-                        </tr>
-                        <tr>
-                            <td>Recount Text</td>
-                        </tr>
-                        <tr>
-                            <td>Narrative Text</td>
-                        </tr>
-                    </table>
-                </div>
-            </div>
-            <div class="item">
-                <img src="images/Ellipse 1.png" class="avatar">
-                <div class="content">
-                    <table width="100%" cellspacing="0">
-                        <tr>
-                            <td>Testimoni</td>
-                        </tr>
-                        <tr>
-                            <td>Nama</td>
-                        </tr>
-                        <tr>
-                            <td>Kelas</td>
-                        </tr>
-                    </table>
-                </div>
-            </div>
-            <div class="item">
-                <img src="images/Ellipse 3.png" class="avatar">
-                <div class="content">
-                    <table width="100%" cellspacing="0">
-                        <tr>
-                            <td>Testimoni</td>
-                        </tr>
-                        <tr>
-                            <td>Nama</td>
-                        </tr>
-                        <tr>
-                            <td>Kelas</td>
-                        </tr>
-                    </table>
-                </div>
-            </div>
-         </table>
-    </div>
-</div>
-</div>
-    </div>
-    <div class="direction">
-        <button id="prev"> < </button>
-        <button id="next"> > </button>
-    </div>
-    <script src="script.js">
-        document.getElementById('next').onclick = function(){
-    const widthItem = document.querySelector('.item').offsetWidth;
-    document.getElementById('formList').scrollLeft += widthItem;
-}
-    </script>
+          <p>On Wednesday, Taylor Swift announced that the re-recorded version of her 2014 album 1989 was set to be released in October. Since 2021, pop music fans have been excitedly consuming these re-recorded albums, dubbed "Taylor's versions", which have been streamed more than 1 billion times – far outstripping the originals.</p>
+          <p>n 2019, music executive Scooter Braun acquired Swift's previous record label Big Machine, taking ownership of her back catalogue before selling the Master tapes to an investment fund for a reported $300m. Embroiled for several years in a subsequent dispute, Swift decided to take back control by embarking on the project to re-record her entire back catalogue. Having worked through 2008's Fearless and 2010's Speak Now, and with the release in 2022 of 2012's Red, her fans are revisiting this integral moment of Taylor Swift's career – which saw the emergence of her "pop era", and the reinvention of herself</p>
+          <p>he album's message is one of hope, of making something beautiful out of something difficult. In her 1995 book, She Bop: the definitive history of women in popular music, Dr Lucy O'Brien writes that in pop: "there is the impression of both embattled strength and fragility. It is in Dusty Springfield's taut notes, Chrissie Hynde's jangling rock guitar, Amy Winehouse's bluesy contralto." And it is in Taylor Swift's 1989. </p>
+          <p>With the release of the album, Swift gained – alongside a legion of new fans – a newfound respect from the wider music industry. She began to be referred to as an "auteur" rather than an artist, and the music publications that had previously ignored her started to pay attention. The alt-country musician Ryan Adams recorded an entire album of 1989 covers (met by some with a less-than-rapturous reception), and she became a permanent collaborator with Pitchfork darlings like Bon Iver's Justin Vernon and The National's Aaron Dessner.</p>
+      </div>
+      
+      <footer class="galaxy-footer">
+        <div class="footer-first">
+           <div class="left-column">
+              <div class="footer-column about-us-footer">
+                 <h3>About Us</h3>
+                    <ul>
+                       <li><a href="#">Blog</a></li>
+                       <li><a href="#">Category</a></li>
+                       <li><a href="#">Career</a></li>
+                    </ul>        
+              </div>
+              <div class="footer-column support-footer">
+                 <h3>Help and Support</h3>
+                    <ul>
+                       <li><a href="#">English Galaxy FAQs</a></li>
+                    </ul>        
+              </div>
+        </div>
+        <div class="right-column">
+           <div class="footer-column social-footer">
+              <h3>Socials</h3>
+                 <ul class="social-icons">
+                    <li><a href="#"><i class="fab fa-facebook"></i></a></li>
+                    <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+                    <li><a href="#"><i class="fab fa-instagram"></i></a></li>
+                    <li><a href="#"><i class="fab fa-whatsapp"></i></a></li>
+                 </ul>        
+           </div>
+        </div>
+        </div>
 
- <footer class="galaxy-footer">
-         <div class="footer-first">
-            <div class="left-column">
-               <div class="footer-column about-us-footer">
-                  <h3>About Us</h3>
-                     <ul>
-                        <li><a href="#">Blog</a></li>
-                        <li><a href="#">Category</a></li>
-                        <li><a href="#">Career</a></li>
-                     </ul>        
-               </div>
-               <div class="footer-column support-footer">
-                  <h3>Help and Support</h3>
-                     <ul>
-                        <li><a href="#">English Galaxy FAQs</a></li>
-                     </ul>        
-               </div>
-         </div>
-         <div class="right-column">
-            <div class="footer-column social-footer">
-               <h3>Socials</h3>
-                  <ul class="social-icons">
-                     <li><a href="#"><i class="fab fa-facebook"></i></a></li>
-                     <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-                     <li><a href="#"><i class="fab fa-instagram"></i></a></li>
-                     <li><a href="#"><i class="fab fa-whatsapp"></i></a></li>
-                  </ul>        
-            </div>
-         </div>
-         </div>
- 
-         <div class="footer-second">
-             <p>&copy; 2023 English Galaxy. All Rights Reserved.</p>
-         </div>
-     </footer>
-</body>
-</body>
-</html>
+        <div class="footer-second">
+            <p>&copy; 2023 English Galaxy. All Rights Reserved.</p>
+        </div>
+    </footer>
 </body>
 </html>
