--- a/FAQ.html
+++ b/FAQ.html
@@ -1,5 +1,4 @@
-<link rel="stylesheet" type="text/css" href="reset.css">
-<link rel="stylesheet" type="text/css" href="main.css">
+<link rel="stylesheet" type="text/css" href="FAQ.css">
 </head>
 <body>
     <header class="galaxy-header">
