--- a/register.html
+++ b/register.html
@@ -8,7 +8,7 @@
 </head>
 <body class="log">
     <div class="login">
-        <a href="index.html"><img src="img/logo.png" alt="Galaxy Logo"></a>
+        <img src="img/logo.png" alt="Galaxy Logo">
         <h1>Registrasi</h1>
         <form>
             <div class="input-group"><input type="text" placeholder="Nama" name="nama"></div>
